--- a/gradle.properties
+++ b/gradle.properties
@@ -12,9 +12,9 @@ maven_group=xyz.amymialee
 archives_base_name=guardeez
 
 # Publishing
-curseforge_id = 927602
-curseforge_slug = scarybees
-modrinth_id = 7RuviENd
-modrinth_slug = scarybees
-minecraft_version_range_start=1.21
-minecraft_version_range_end=1.21.1
+curseforge_id = 1144216
+curseforge_slug = guardeez
+modrinth_id = UJTkqvAU
+modrinth_slug = guardeez
+minecraft_version_range_start=1.21.3
+minecraft_version_range_end=1.21.3
